- Client.availableVersions: fix callback arguments
- Client.resources and BaseResource.resources contain objects
- Client.authenticate: report if authentication has failed
- Add method Authentication.Token.renewToken
- Resources are aware of their parents
- More thorough check to not require xmlhttprequest in browsers
- Resource.actions does not contain aliases
- Authenticate when fetching description
- Fix Client.destroyResources
- Client.fetchDescription: Handle errors when fetching/parsing fails

* Thu Mar 03 2016 - version 0.5.2
- No changes

* Fri Feb 26 2016 - version 0.5.1
- No changes

* Tue Feb 9 2016 - version 0.5.0
- No changes

* Sun Jan 24 2016 - version 0.4.2
- No changes

* Sat Jan 23 2016 - version 0.4.1
- No changes

* Wed Jan 20 2016 - version 0.4.0
- Check protocol version
- Source code split to multiple files and compiled into one using gulp
- package.json for npm, bower.json for bower